--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -8,7 +8,7 @@
       {% block content %}
       <!-- класс py-5 создает отступы сверху и снизу блока -->
       <div class="container">
-        <h1>{{group.descprition}}</h1>
+        <h1> {{ title }} <br> {{ group.description }}</h1>
         <p>
           Записи сообщества {{ group }}
         </p>
